<resources>
    <string name="app_name">Byte Bank</string>
    <string name="content_description">content description</string>

    <!-- Sign up -->
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Senha</string>
    <string name="hintName">Nome</string>
    <string name="hintBalance">Saldo</string>
    <string name="btnConfirm">Confirmar</string>

    <!-- Sign in -->
    <string name="btnForgotPassword">Esqueceu a senha?</string>
    <string name="btnSignIn">Entrar</string>
    <string name="btnSignUp">Cadastrar-se</string>

    <!-- Home -->
    <string name="txtName">Visitante</string>
    <string name="txtBalance">$ %1$.2f</string>
    <string name="txtTitleBalance">Saldo</string>

    <!-- Transaction items -->
    <string name="txtValueTitle">Valor</string>
    <string name="txtValue">$ %1$.2f</string>
    <string name="txtNumberAccount">Nº da conta: %1d</string>
    <string name="date">%1d-%2s-%3d</string>

    <!-- Dialog Forgot Password -->
    <string name="btnGoBack">Voltar</string>
</resources>